# facetracking-rs

./: .gitignore  Cargo.toml  README.md  anc.txt  blazeface.onnx  dl.sh  face_detection_back.h5  face_detection_front.h5  main  pruned_eye_net.onnx  tree.txt
.github/workflows/: rust.yml
saved_model_face_detection_back/variables/: variables.data-00000-of-00001  variables.index
saved_model_face_detection_front/variables/: variables.data-00000-of-00001  variables.index
src/: Untitled-2.rs  app.rs  face.rs  lib.rs  main.rs  utils.rs  webcam.rs
src/bin2/: 3d_test.rs  camera.rs  camera2.rs  playground.rs
src/bin2/shaders/: shader.wgsl
src/face_detection/: mod.rs
src/face_detection/model_blazeface/: mod.rs
src/face_landmarks/: mod.rs
src/face_landmarks/model_mediapipe/: canonical_face_model.rs  mod.rs  procrustes_solver.rs
