[package]
name = "rust_eyetracking"
version = "0.1.0"
edition = "2021"

[dependencies]
dcv-color-primitives = "0.5.4"
image = "0.24.7"
ort = "1.15.5"
ndarray = "0.15.6"
imageproc = "0.23.0"
ndarray-npy = "0.8.1"
nalgebra = "0.32.3"
wgpu = "0.17.0"
winit = "0.28.6"
pollster = "0.3.0"
env_logger = "0.10.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
rusttype = "0.9.3"
nng = "1.0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
egui = "0.22.0"
eframe = "0.22.0"
egui_glow = "0.22.0"
re_ui = "0.8.2"
egui-gizmo = "0.11.0"
rayon = "1.8.0"

[dependencies.show-image]
version = "0.13.1"
features = ["image"]

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa"
branch = "0.10"
version = "0.10.4"
features = ["input-native", "output-threaded"]
